--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,16 +1,6 @@
 *
-	font-family: 'Roboto', sans-serif
-@import 'blocks/header';
-@import 'blocks/titles';
-@import 'blocks/promo';
-@import 'blocks/button';
-@import 'blocks/reasons';
-@import 'blocks/mobile';
-@import 'blocks/choice';
-@import 'blocks/require';
-@import 'blocks/map';
-@import 'blocks/footer';
-@import 'blocks/media';
-
-
-
+  font-family: 'Roboto', sans-serif
+@import "variables"
+@import "mixins"
+@import "general"
+@import "media"
